--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -15,6 +15,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap" rel="stylesheet">
 
+    <!--sweet alert script link-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- Custom css link-->
     <link rel="stylesheet" href="/css/styles.css">
 
@@ -32,10 +35,10 @@
             </a>
 
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-                <li><a href="/about" class="nav-link px-2 link-secondary">About</a></li>
-                <li><a href="/submitRecipe" class="nav-link px-2 link-secondary">Submit</a></li>
-                <li><a href="/contact" class="nav-link px-2 link-secondary">Contact</a></li>
+                <li><a href="/" class="nav-link px-2 link-secondary">Inicio</a></li>
+                <li><a href="/submitRecipe" class="nav-link px-2 link-secondary">Publicar</a></li>
+                <li><a href="/enmantencion" class="nav-link px-2 link-secondary">Inciar</a></li>
+                <li><a href="/enmantencion" class="nav-link px-2 link-secondary">Contacto</a></li>
             </ul>
 
             <div class="col-md-3 text-end">
