--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background-image: url("/img/background.jpg");
+    background-image: url("/img/background.svg");
     background-color: rgb(243, 243, 243);
 }
 
