--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -1,9 +1,9 @@
-<h1 class="pb-4 ">Explore Categories</h1>
+<h1 class="pb-4 ">Categorias</h1>
 
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="/">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Explore Categories</li>
+      <li class="breadcrumb-item"><a href="/">Inicio</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Categorias</li>
     </ol>
   </nav>
 
@@ -13,7 +13,7 @@
     <% categories.forEach(function(category, index) { %>
     <a href="/categories/<%- category.name%>" class="col text-center category_link ">
         <div class="category__img shadow">
-            <img src="/img/<%- category.image%>" alt="<%- category.name%>" loading="lazy">
+            <img src="<%- category.img%>" alt="<%- category.name%>" loading="lazy">
         </div>
         <div class="pt-1"><%- category.name%></div>
     </a>
@@ -26,7 +26,7 @@
         <% categorieById.forEach(function(recipe, index) { %>
                 <a href="/recipe/<%= recipe._id%>" class="col text-center category_link">
                 <div class="category__img category__img--large shadow">
-                    <img src="uploads/<%= recipe.img%>" alt="<%= recipe.name%>" loading="lazy">
+                    <img src="<%= recipe.img%>" alt="<%= recipe.name%>" loading="lazy">
                 </div>
                 <div class="pt-1"><%= recipe.name%></div>
             </a>
