--- a/views/exploreLatest.ejs
+++ b/views/exploreLatest.ejs
@@ -1,11 +1,11 @@
-<h1 class="pb-4">Explore the Latest</h1>
+<h1 class="pb-4">Explora las ultimas recetas</h1>
 
 <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
     <% if(recipes != '') { %>
         <% recipes.forEach(function(recipe, index) { %>
                 <a href="/recipe/<%= recipe._id%>" class="col text-center category_link">
                 <div class="category__img category__img--large shadow">
-                    <img src="uploads/<%= recipe.img%>" alt="<%= recipe.name%>" loading="lazy">
+                    <img src="<%= recipe.img%>" alt="<%= recipe.name%>" loading="lazy">
                 </div>
                 <div class="pt-1"><%= recipe.name%></div>
             </a>
