--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -1,16 +1,16 @@
 
 <% if(recipes != null) { %>
-    <h1>Recipe</h1>
+    <h1>Receta:</h1>
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
+          <li class="breadcrumb-item"><a href="/">Inicio</a></li>
           <li class="breadcrumb-item active" aria-current="page"><%- recipes.name %></li>
         </ol>
     </nav>
 
     <div class="row">
         <div class="col-12 col-md-4">
-            <img src="/uploads/<%- recipes.img %>" class="img-fluid sticky-top" style="top:20px;" alt="<%- recipes.name %>" loading="lazy">
+            <img src="<%- recipes.img %>" class="img-fluid sticky-top" style="top:20px;" alt="<%- recipes.name %>" loading="lazy">
         </div>
 
         <div class="col-12 col-md-8">
@@ -22,24 +22,30 @@
                     <i class="bi bi-tag"></i>
                     <%- recipes.category %>
                 </div>
+
+                <div class="row pt-4">
+                    <div class="col-12">
+                        <h4>Ingedientes</h4>
+                        <ul class="list-group list-group-flush">
+                            <% if (recipes.ingredients && recipes.ingredients.length > 0) { %>
+                                <% recipes.ingredients.forEach(function(ingredient, index) { %>
+                                    <li class="list-group-item">
+                                        <%= ingredient %>
+                                    </li>
+                                <% }) %>
+                            <% } else { %>
+                                <li class="list-group-item">No hay ingredientes disponibles</li>
+                            <% } %>                        
+                        </ul>
+                    </div>
+                </div>
+
                 <div class="col-12" style="white-space: pre-line;">
-                    <h4>Cooking Instructions</h4>
+                    <h4>Instrucciones</h4>
                     <%- recipes.description %>
                 </div>
             </div>
 
-            <div class="row pt-4">
-                <div class="col-12">
-                    <h4>Ingedients</h4>
-                    <ul class="list-group list-group-flush">
-                        <% recipes.ingredients.forEach(function(ingredients, index){ %>
-                        <li class="list-group-item">
-                            <%= ingredients %>
-                        </li>
-                        <% }) %>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
 <% } else { %>
